--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ortoped-app",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,23 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^7.3.15",
-    "@react-navigation/native": "^7.1.11",
-    "@react-navigation/stack": "^7.3.4",
-    "axios": "^1.10.0",
-    "expo": "53.0.13",
-    "expo-status-bar": "~2.2.3",
-    "moment": "^2.30.1",
-    "react": "19.0.0",
-    "react-native": "0.79.4",
-    "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/native": "7.0.0",
+    "@react-navigation/stack": "7.0.0",
+    "expo": "~53.0.0",
+    "expo-status-bar": "~1.8.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.5.0",
+    "react-native-safe-area-context": "4.8.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.14",
+    "@types/react-native": "~0.72.0",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
